--- a/Theano-tutorial-adding.ipynb
+++ b/Theano-tutorial-adding.ipynb
@@ -168,10 +168,38 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "#Adding two matrices\n",
+      "x = T.dmatrix('x')\n",
+      "y = T.dmatrix('y')\n",
+      "f = function([x,y],x+y)\n",
+      "print f([[1,2],[1,2]],[[5,6],[6,5]])#can use 2d arrays as inputs\n",
+      "print f(np.asarray([[1,2],[1,2]]),np.asarray([[5,6],[6,5]]))#can use numpy arrays as inputs\n",
+      "#Broadcasting example above can be used here\n",
+      "#Types:\n",
+      "#byte: bscalar, bvector, bmatrix, brow, bcol, btensor3, btensor4\n",
+      "#16-bit integers: wscalar, wvector, wmatrix, wrow, wcol, wtensor3, wtensor4\n",
+      "#32-bit integers: iscalar, ivector, imatrix, irow, icol, itensor3, itensor4\n",
+      "#64-bit integers: lscalar, lvector, lmatrix, lrow, lcol, ltensor3, ltensor4\n",
+      "#float: fscalar, fvector, fmatrix, frow, fcol, ftensor3, ftensor4\n",
+      "#double: dscalar, dvector, dmatrix, drow, dcol, dtensor3, dtensor4\n",
+      "#complex: cscalar, cvector, cmatrix, crow, ccol, ctensor3, ctensor4"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[[ 6.  8.]\n",
+        " [ 7.  7.]]\n",
+        "[[ 6.  8.]\n",
+        " [ 7.  7.]]\n"
+       ]
+      }
+     ],
+     "prompt_number": 17
     },
     {
      "cell_type": "code",
