--- a/Theano-tutorial-adding.ipynb
+++ b/Theano-tutorial-adding.ipynb
@@ -11,6 +11,8 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "#This notebook will be about adding basic types in Theano\n",
+      "#Followed from this url: http://deeplearning.net/software/theano/tutorial/adding.html\n",
       "import numpy as np"
      ],
      "language": "python",
@@ -204,50 +206,55 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "#Exercise: compute this expression: a ** 2 + b ** 2 + 2 * a * b\n",
+      "import theano\n",
+      "a = theano.tensor.dvector('a') # declare symbol\n",
+      "b = theano.tensor.dvector('b') # declare symbol\n",
+      "out = b**2 + a ** 2 + 2*a*b               # build symbolic expression\n",
+      "f = theano.function([a,b], out)   # compile function\n",
+      "print f([1,3], [2,4])  # prints `array([0, 2, 1026])`"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[  9.  49.]\n"
+       ]
+      }
+     ],
+     "prompt_number": 21
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "whos"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Variable   Type                        Data/Info\n",
+        "------------------------------------------------\n",
+        "T          module                      <module 'theano.tensor' f<...>ano/tensor/__init__.pyc'>\n",
+        "function   function                    <function function at 0x1088c7f50>\n",
+        "mat1       ndarray                     3x2: 6 elems, type `int64`, 48 bytes\n",
+        "mat2       int                         5\n",
+        "pp         theano.printing.PPrinter    <theano.printing.PPrinter<...> instance at 0x1088b7dd0>\n",
+        "x          TensorVariable              x\n",
+        "y          TensorVariable              y\n",
+        "z          TensorVariable              Elemwise{add,no_inplace}.0\n"
+       ]
+      }
+     ],
+     "prompt_number": 18
     }
    ],
    "metadata": {}
