--- a/Theano-tutorial-more-examples.ipynb
+++ b/Theano-tutorial-more-examples.ipynb
@@ -40,15 +40,32 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "#tanh version of sigmoid\n",
+      "sTanh = .5 + .5*T.tanh(.5*x)\n",
+      "logisticTanh = function([x],sTanh)\n",
+      "print logistic([[0,1],[-1,-2]])\n"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[[ 0.5         0.73105858]\n",
+        " [ 0.26894142  0.11920292]]\n"
+       ]
+      }
+     ],
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "#Multi-dimensional functions a.k.a computing multiple outputs at the same time."
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
