--- a/Theano-tutorial-more-examples.ipynb
+++ b/Theano-tutorial-more-examples.ipynb
@@ -127,16 +127,58 @@
      "collapsed": false,
      "input": [
       "#Functions with internal states: aka use of shared variables\n",
-      "from theano import shared\n"
+      "from theano import shared\n",
+      "state = shared(0)#a hybrid symbolic and non-symbolic variables whose value may be shared between two functions\n",
+      "#value can be access by .get_value() and .set_value() methods\n",
+      "inc = T.iscalar('increment')\n",
+      "accumulator = function([inc],state,updates=[(state,state+inc)])\n",
+      "#example\n",
+      "print state.get_value()\n",
+      "print accumulator(1)\n",
+      "print state.set_value(-20)\n",
+      "print state.get_value()\n",
+      "print accumulator(44)\n",
+      "print state.get_value()\n",
+      "\n",
+      "#additional function\n",
+      "decrementor = function([inc],state,updates=[(state,state-inc)])\n",
+      "print decrementor(10)\n",
+      "print state.get_value()\n",
+      "\n",
+      "#This way of using shared variables enables faster computation within Theano. \n",
+      "#We can override shared state using givens argument to the function definition (not shown here)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "0\n",
+        "0\n",
+        "None\n",
+        "-20\n",
+        "-20\n",
+        "24\n",
+        "24\n",
+        "14\n"
+       ]
+      }
+     ],
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "#Random numbers:\n",
+      "\n",
+      "#In theano, we express everything symbolically and compile it later to get functions.\n",
+      "#Thus, use of random number is not as straightforward\n",
+      "#Think of putting random variables on a graph\n",
+      "#We can then attach a numpy RandomStream object to each \"symbol\" and draw as necessary\n"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
