--- a/Theano-tutorial-more-examples.ipynb
+++ b/Theano-tutorial-more-examples.ipynb
@@ -177,16 +177,52 @@
       "#In theano, we express everything symbolically and compile it later to get functions.\n",
       "#Thus, use of random number is not as straightforward\n",
       "#Think of putting random variables on a graph\n",
-      "#We can then attach a numpy RandomStream object to each \"symbol\" and draw as necessary\n"
+      "#We can then attach a numpy RandomStream object to each \"symbol\" and draw as necessary\n",
+      "\n",
+      "srng = T.shared_randomstreams.RandomStreams(seed = 42)\n",
+      "rv_u = srng.uniform((2,2))\n",
+      "rv_n = srng.normal((2,2))\n",
+      "f = function([], rv_u)\n",
+      "g = function([], rv_n, no_default_updates=True)    #Not updating rv_n.rng, so will get the same realization!\n",
+      "nearly_zeros = function([], rv_u + rv_u - 2 * rv_u)\n",
+      "print f()\n",
+      "print f()\n",
+      "print g()\n",
+      "print g()#same realization\n",
+      "print nearly_zeros()#output 0 since rv_u is called only once even though it appears thrice in the function expression."
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[[ 0.37658785  0.78818459]\n",
+        " [ 0.07295109  0.0119289 ]]\n",
+        "[[ 0.94040874  0.43140626]\n",
+        " [ 0.7805285   0.30055131]]\n",
+        "[[-0.44221778 -1.18521008]\n",
+        " [ 2.57751759 -0.2318672 ]]\n",
+        "[[-0.44221778 -1.18521008]\n",
+        " [ 2.57751759 -0.2318672 ]]\n",
+        "[[ 0.  0.]\n",
+        " [ 0.  0.]]\n"
+       ]
+      }
+     ],
+     "prompt_number": 17
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "#Random numbers can be seeded individually as well\n",
+      "#Seed one RV by assigning to the .rng attribute using .rng.set_value()\n",
+      "rng_val = rv_n.rng.get_value(borrow=True)#get the rng for rv_n\n",
+      "rng_val.seed(51) #seed the val object\n",
+      "rv_n.rng.set_value(rng_val,borrow=True)#assign back the seeded rng"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
