--- a/Theano-tutorial-adding.ipynb
+++ b/Theano-tutorial-adding.ipynb
@@ -11,6 +11,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "#Part 1 in this series of notebooks\n",
       "#This notebook will be about adding basic types in Theano\n",
       "#Followed from this url: http://deeplearning.net/software/theano/tutorial/adding.html\n",
       "import numpy as np"
