--- a/Theano-tutorial-more-examples.ipynb
+++ b/Theano-tutorial-more-examples.ipynb
@@ -11,6 +11,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "#Part 2\n",
       "#From the page http://deeplearning.net/software/theano/tutorial/examples.html\n",
       "\n",
       "#Logistic function\n",
@@ -222,6 +223,19 @@
       "rng_val = rv_n.rng.get_value(borrow=True)#get the rng for rv_n\n",
       "rng_val.seed(51) #seed the val object\n",
       "rv_n.rng.set_value(rng_val,borrow=True)#assign back the seeded rng"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#Skipped\n",
+      "#Sharing streams between functions\n",
+      "#Copying random state between theano graphs\n",
+      "#Other random distributions"
      ],
      "language": "python",
      "metadata": {},
