--- a/NLP-norvig-python-notebook/How to Do Things with Words.ipynb
+++ b/NLP-norvig-python-notebook/How to Do Things with Words.ipynb
@@ -135,7 +135,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 6,
+       "text": [
+        "Counter({'is': 2, 'this': 1, 'a': 1, 'test': 1, 'it': 1})"
+       ]
+      }
+     ],
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -145,7 +155,16 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[('the', 80029), ('of', 40025), ('and', 38312), ('to', 28766), ('in', 22047), ('a', 21155), ('that', 12512), ('he', 12401), ('was', 11410), ('it', 10681), ('his', 10034), ('is', 9774), ('with', 9740), ('as', 8064), ('i', 7682), ('had', 7383), ('for', 6938), ('at', 6791), ('by', 6738), ('on', 6643)]\n"
+       ]
+      }
+     ],
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -155,7 +174,16 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "29152 1105211\n"
+       ]
+      }
+     ],
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -166,7 +194,19 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "the 80029\n",
+        "unusual 32\n",
+        "characteristically 6\n",
+        "neverbeforeseen 0\n"
+       ]
+      }
+     ],
+     "prompt_number": 9
     },
     {
      "cell_type": "markdown",
