--- a/NLP-norvig-python-notebook/How to Do Things with Words.ipynb
+++ b/NLP-norvig-python-notebook/How to Do Things with Words.ipynb
@@ -255,7 +255,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
@@ -265,7 +266,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 11,
+       "text": [
+        "[('', 'wird'), ('w', 'ird'), ('wi', 'rd'), ('wir', 'd'), ('wird', '')]"
+       ]
+      }
+     ],
+     "prompt_number": 11
     },
     {
      "cell_type": "markdown",
@@ -288,7 +299,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
@@ -306,7 +318,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
@@ -317,7 +330,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "set(['wird'])\n",
+        "set(['wirdh', 'wirdw', 'jird', 'wiid', 'wirj', 'wiprd', 'rird', 'wkird', 'wiqrd', 'wrird', 'wisrd', 'zwird', 'wiqd', 'wizrd', 'wirs', 'wrd', 'wqird', 'tird', 'wirdp', 'wrrd', 'wzrd', 'wiad', 'nird', 'wirsd', 'wixd', 'wxird', 'lird', 'eird', 'wmird', 'wihd', 'wirp', 'lwird', 'wirzd', 'widrd', 'wxrd', 'ewird', 'wirdx', 'wirkd', 'hwird', 'wipd', 'wirnd', 'uwird', 'wirz', 'mwird', 'wjrd', 'wirjd', 'wirrd', 'wirdd', 'wsird', 'bwird', 'wcrd', 'xwird', 'wdird', 'wibrd', 'wikd', 'wiryd', 'wiord', 'gird', 'wtird', 'wbrd', 'nwird', 'wlrd', 'wgird', 'wmrd', 'wirf', 'wirg', 'wird', 'wire', 'wirb', 'wirc', 'wira', 'wkrd', 'wiro', 'wirl', 'wirm', 'iird', 'wirk', 'wirh', 'wiri', 'wirv', 'wirw', 'wirt', 'wiru', 'wirr', 'wicd', 'cird', 'wirq', 'wirqd', 'wizd', 'wirhd', 'ird', 'bird', 'wirx', 'wiry', 'wvrd', 'widr', 'wprd', 'wirad', 'wijd', 'wirxd', 'uird', 'wirdb', 'qwird', 'dird', 'wnrd', 'wjird', 'gwird', 'whrd', 'wtrd', 'woird', 'rwird', 'wurd', 'wijrd', 'witrd', 'wwrd', 'dwird', 'vwird', 'wibd', 'wiyd', 'wicrd', 'weird', 'yird', 'wiwrd', 'wirdv', 'wirdu', 'wid', 'wirds', 'wirdr', 'sird', 'wirbd', 'wirdq', 'wirdy', 'wivrd', 'wirdg', 'wirdf', 'wirde', 'wiud', 'wirdc', 'wir', 'wirda', 'wfird', 'kwird', 'wirdn', 'wirdm', 'wirdl', 'wirdk', 'wirdj', 'wiird', 'wnird', 'wiurd', 'wied', 'aird', 'wirod', 'wpird', 'wcird', 'wzird', 'jwird', 'wirdo', 'wsrd', 'wimd', 'wirwd', 'mird', 'fird', 'wuird', 'wirdt', 'wired', 'wirgd', 'wirfd', 'witd', 'wfrd', 'wyrd', 'wihrd', 'zird', 'ward', 'wilrd', 'widd', 'iwrd', 'hird', 'word', 'wisd', 'wvird', 'pird', 'wlird', 'wyird', 'wdrd', 'werd', 'wild', 'oird', 'wirid', 'wgrd', 'wirvd', 'wiod', 'wirud', 'wircd', 'wiyrd', 'wigrd', 'wixrd', 'wiard', 'vird', 'wiwd', 'wigd', 'wirmd', 'swird', 'wierd', 'xird', 'qird', 'waird', 'wqrd', 'kird', 'cwird', 'wirtd', 'wirdz', 'awird', 'fwird', 'wirpd', 'wifrd', 'pwird', 'owird', 'wivd', 'wimrd', 'iwird', 'winrd', 'wirdi', 'wrid', 'wifd', 'wirld', 'wwird', 'ywird', 'wirn', 'wbird', 'whird', 'wikrd', 'wind', 'twird'])\n"
+       ]
+      }
+     ],
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
@@ -327,7 +350,16 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "24254\n"
+       ]
+      }
+     ],
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
@@ -341,7 +373,18 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "['_ird', '_wird', 'ird', 'iwrd', 'w_ird', 'w_rd', 'wi_d', 'wi_rd', 'wid', 'widr', 'wir', 'wir_', 'wir_d', 'wird_', 'wrd', 'wrid']\n",
+        "\n",
+        "['__ird', '__rd', '__wird', '_i_d', '_i_rd', '_id', '_idr', '_ir', '_ir_', '_ir_d', '_ird', '_ird_', '_iwrd', '_rd', '_rid', '_w_ird', '_w_rd', '_wi_d', '_wi_rd', '_wid', '_widr', '_wir', '_wir_', '_wir_d', '_wird', '_wird_', '_wrd', '_wrid', 'i_d', 'i_rd', 'i_wrd', 'id', 'idr', 'ir', 'ir_', 'ir_d', 'ird', 'ird_', 'irwd', 'iw_d', 'iw_rd', 'iwd', 'iwdr', 'iwr', 'iwr_', 'iwr_d', 'iwrd_', 'rd', 'rid', 'rwd', 'rwid', 'w__d', 'w__ird', 'w__rd', 'w_d', 'w_dr', 'w_i_d', 'w_i_rd', 'w_id', 'w_idr', 'w_ir', 'w_ir_', 'w_ir_d', 'w_ird', 'w_ird_', 'w_r', 'w_r_', 'w_r_d', 'w_rd', 'w_rd_', 'w_rid', 'wd', 'wdi', 'wdir', 'wdr', 'wi', 'wi_', 'wi__', 'wi__d', 'wi__rd', 'wi_d', 'wi_d_', 'wi_dr', 'wi_r', 'wi_r_', 'wi_r_d', 'wi_rd', 'wi_rd_', 'wid', 'wid_', 'wid_r', 'widr_', 'wir', 'wir_', 'wir__', 'wir__d', 'wir_d', 'wir_d_', 'wird', 'wird_', 'wird__', 'wr', 'wr_', 'wr_d', 'wr_id', 'wrd', 'wrd_', 'wrdi', 'wri', 'wri_', 'wri_d', 'wrid_']\n"
+       ]
+      }
+     ],
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
@@ -351,7 +394,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 17,
+       "text": [
+        "['spelling', 'errors', 'in', 'something', 'whatever', 'unusual', 'mistakes']"
+       ]
+      }
+     ],
+     "prompt_number": 17
     },
     {
      "cell_type": "markdown",
