KDE from ks R package

--- a/NLP-norvig-python-notebook/How to Do Things with Words.ipynb
+++ b/NLP-norvig-python-notebook/How to Do Things with Words.ipynb
@@ -435,7 +435,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 18
     },
     {
      "cell_type": "code",
@@ -445,7 +446,20 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 19,
+       "text": [
+        "[<method 'upper' of 'str' objects>,\n",
+        " <method 'lower' of 'str' objects>,\n",
+        " <method 'title' of 'str' objects>,\n",
+        " str]"
+       ]
+      }
+     ],
+     "prompt_number": 19
     },
     {
      "cell_type": "code",
@@ -455,7 +469,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 20,
+       "text": [
+        "'Spelling Errors IN something. Whatever; unusual mistakes?'"
+       ]
+      }
+     ],
+     "prompt_number": 20
     },
     {
      "cell_type": "code",
@@ -465,7 +489,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 21,
+       "text": [
+        "'Audience says:'"
+       ]
+      }
+     ],
+     "prompt_number": 21
     },
     {
      "cell_type": "markdown",
