--- a/NLP-norvig-python-notebook/How to Do Things with Words.ipynb
+++ b/NLP-norvig-python-notebook/How to Do Things with Words.ipynb
@@ -20,7 +20,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -67,13 +67,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 2,
+       "prompt_number": 3,
        "text": [
         "6488409"
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -98,7 +98,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -139,13 +139,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 6,
+       "prompt_number": 5,
        "text": [
         "Counter({'is': 2, 'this': 1, 'a': 1, 'test': 1, 'it': 1})"
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -164,7 +164,7 @@
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -183,7 +183,7 @@
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -206,7 +206,7 @@
        ]
       }
      ],
-     "prompt_number": 9
+     "prompt_number": 8
     },
     {
      "cell_type": "markdown",
@@ -256,7 +256,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 10
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -270,13 +270,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 11,
+       "prompt_number": 10,
        "text": [
         "[('', 'wird'), ('w', 'ird'), ('wi', 'rd'), ('wir', 'd'), ('wird', '')]"
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 10
     },
     {
      "cell_type": "markdown",
@@ -300,7 +300,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 12
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
@@ -319,7 +319,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 13
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
@@ -340,7 +340,7 @@
        ]
       }
      ],
-     "prompt_number": 14
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
@@ -359,7 +359,7 @@
        ]
       }
      ],
-     "prompt_number": 15
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
@@ -384,7 +384,7 @@
        ]
       }
      ],
-     "prompt_number": 16
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
@@ -398,13 +398,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 17,
+       "prompt_number": 16,
        "text": [
         "['spelling', 'errors', 'in', 'something', 'whatever', 'unusual', 'mistakes']"
        ]
       }
      ],
-     "prompt_number": 17
+     "prompt_number": 16
     },
     {
      "cell_type": "markdown",
@@ -436,7 +436,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 18
+     "prompt_number": 17
     },
     {
      "cell_type": "code",
@@ -450,7 +450,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 19,
+       "prompt_number": 18,
        "text": [
         "[<method 'upper' of 'str' objects>,\n",
         " <method 'lower' of 'str' objects>,\n",
@@ -459,7 +459,7 @@
        ]
       }
      ],
-     "prompt_number": 19
+     "prompt_number": 18
     },
     {
      "cell_type": "code",
@@ -473,13 +473,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 20,
+       "prompt_number": 19,
        "text": [
         "'Spelling Errors IN something. Whatever; unusual mistakes?'"
        ]
       }
      ],
-     "prompt_number": 20
+     "prompt_number": 19
     },
     {
      "cell_type": "code",
@@ -493,13 +493,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 21,
+       "prompt_number": 20,
        "text": [
         "'Audience says:'"
        ]
       }
      ],
-     "prompt_number": 21
+     "prompt_number": 20
     },
     {
      "cell_type": "markdown",
@@ -553,7 +553,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 21
     },
     {
      "cell_type": "code",
@@ -567,7 +568,18 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "2.98419543271e-11 this is a test\n",
+        "8.64036404331e-16 this is a unusual test\n",
+        "0.0 this is a neverbeforeseen test\n"
+       ]
+      }
+     ],
+     "prompt_number": 22
     },
     {
      "cell_type": "markdown",
@@ -623,7 +635,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 23
     },
     {
      "cell_type": "code",
@@ -633,7 +646,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 24,
+       "text": [
+        "18"
+       ]
+      }
+     ],
+     "prompt_number": 24
     },
     {
      "cell_type": "code",
@@ -656,7 +679,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 25
     },
     {
      "cell_type": "code",
@@ -667,7 +691,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[('', 'word'), ('w', 'ord'), ('wo', 'rd'), ('wor', 'd'), ('word', '')]\n",
+        "[('r', 'eallylongtext'), ('re', 'allylongtext'), ('rea', 'llylongtext'), ('real', 'lylongtext')]\n"
+       ]
+      }
+     ],
+     "prompt_number": 26
     },
     {
      "cell_type": "code",
@@ -697,7 +731,24 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "wheninthecourseofhumaneventsitbecomesnecessaryforonepeopletodissolvethepoliticalbandswhichhaveconnectedthemwithanotherandtoassumeamongthepowersoftheearththeseparateandequalstationtowhichthelawsofnatureandofnaturesgodentitlethem\n",
+        "['when', 'in', 'the', 'course', 'of', 'human', 'events', 'it', 'becomes', 'necessary', 'for', 'one', 'people', 'to', 'dissolve', 'the', 'political', 'bands', 'which', 'have', 'connected', 'them', 'with', 'another', 'and', 'to', 'assume', 'among', 'the', 'powers', 'of', 'the', 'earth', 'the', 'separate', 'and', 'equal', 'station', 'to', 'which', 'the', 'laws', 'of', 'nature', 'and', 'of', 'natures', 'god', 'entitle', 'them']"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n"
+       ]
+      }
+     ],
+     "prompt_number": 27
     },
     {
      "cell_type": "code",
@@ -707,7 +758,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 28,
+       "text": [
+        "1.5650392978014951e-141"
+       ]
+      }
+     ],
+     "prompt_number": 28
     },
     {
      "cell_type": "code",
@@ -717,7 +778,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 29,
+       "text": [
+        "['small', 'and', 'insignificant', 'amounts']"
+       ]
+      }
+     ],
+     "prompt_number": 29
     },
     {
      "cell_type": "code",
@@ -727,7 +798,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 30,
+       "text": [
+        "['large', 'and', 'insignificant', 'amounts']"
+       ]
+      }
+     ],
+     "prompt_number": 30
     },
     {
      "cell_type": "markdown",
@@ -779,7 +860,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 32
     },
     {
      "cell_type": "code",
@@ -790,7 +872,31 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "333333 "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "588124220187\n",
+        "286358 "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "225955251755\n"
+       ]
+      }
+     ],
+     "prompt_number": 33
     },
     {
      "cell_type": "code",
@@ -800,7 +906,46 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 34,
+       "text": [
+        "[('of the', 2766332391),\n",
+        " ('in the', 1628795324),\n",
+        " ('to the', 1139248999),\n",
+        " ('on the', 800328815),\n",
+        " ('for the', 692874802),\n",
+        " ('and the', 629726893),\n",
+        " ('to be', 505148997),\n",
+        " ('is a', 476718990),\n",
+        " ('with the', 461331348),\n",
+        " ('from the', 428303219),\n",
+        " ('by the', 417106045),\n",
+        " ('at the', 416201497),\n",
+        " ('of a', 387060526),\n",
+        " ('in a', 364730082),\n",
+        " ('will be', 356175009),\n",
+        " ('that the', 333393891),\n",
+        " ('do not', 326267941),\n",
+        " ('is the', 306482559),\n",
+        " ('to a', 279146624),\n",
+        " ('is not', 276753375),\n",
+        " ('for a', 274112498),\n",
+        " ('with a', 271525283),\n",
+        " ('as a', 270401798),\n",
+        " ('<S> and', 261891475),\n",
+        " ('of this', 258707741),\n",
+        " ('<S> the', 258483382),\n",
+        " ('it is', 245002494),\n",
+        " ('can be', 230215143),\n",
+        " ('If you', 210252670),\n",
+        " ('has been', 196769958)]"
+       ]
+      }
+     ],
+     "prompt_number": 34
     },
     {
      "cell_type": "markdown",
@@ -842,7 +987,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 35
     },
     {
      "cell_type": "code",
@@ -854,7 +1000,18 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "1.78739820006e-10\n",
+        "6.41367629438e-08\n",
+        "1.18028600367e-11\n"
+       ]
+      }
+     ],
+     "prompt_number": 36
     },
     {
      "cell_type": "markdown",
@@ -879,7 +1036,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 37
     },
     {
      "cell_type": "code",
@@ -891,7 +1049,32 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "['choose', 'spain']\n",
+        "['small', 'and', 'in', 'significant', 'amounts']"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "['large', 'and', 'in', 'significant', 'amounts']"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n"
+       ]
+      }
+     ],
+     "prompt_number": 38
     },
     {
      "cell_type": "code",
@@ -904,7 +1087,24 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "['far', 'out', 'in', 'the', 'uncharted', 'backwaters', 'of', 'the', 'unfashionable', 'end', 'of', 'the', 'western', 'spiral', 'arm', 'of', 'the', 'galaxy', 'lies', 'a', 'small', 'un', 'regarded', 'yellow', 'sun']\n",
+        "['far', 'out', 'in', 'the', 'uncharted', 'backwaters', 'of', 'the', 'unfashionable', 'end', 'of', 'the', 'western', 'spiral', 'arm', 'of', 'the', 'galaxy', 'lies', 'a', 'small', 'un', 'regarded', 'yellow', 'sun']"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n"
+       ]
+      }
+     ],
+     "prompt_number": 39
     },
     {
      "cell_type": "code",
@@ -916,7 +1116,24 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "['a', 'dry', 'bare', 'sandy', 'hole', 'with', 'nothing', 'in', 'it', 'to', 'sitdown', 'on', 'or', 'to', 'eat']\n",
+        "['a', 'dry', 'bare', 'sandy', 'hole', 'with', 'nothing', 'in', 'it', 'to', 'sit', 'down', 'on', 'or', 'to', 'eat']"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n"
+       ]
+      }
+     ],
+     "prompt_number": 40
     },
     {
      "cell_type": "markdown",
