--- a/textblob-example/textblob-example.ipynb
+++ b/textblob-example/textblob-example.ipynb
@@ -43,8 +43,32 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": "*"
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "0.06\n",
+        "-0.341666666667\n"
+       ]
+      },
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 1,
+       "text": [
+        "TextBlob(\"La amenaza titular de The Blob siempre me ha parecido la pel\u00edcula final\n",
+        "monstruo : una , la masa insaciablemente hambriento ameba capaz de penetrar\n",
+        "pr\u00e1cticamente cualquier salvaguardia , capaz de - como m\u00e9dico condenado escalofriantemente\n",
+        "lo describe - \" asimilar carne al contacto.\n",
+        "Comparaciones Snide a la gelatina ser condenados , es un concepto con el m\u00e1s\n",
+        "devastadora de las posibles consecuencias , no muy diferente del escenario plaga gris\n",
+        "propuesto por los te\u00f3ricos tecnol\u00f3gicos temerosos de\n",
+        "inteligencia artificial ejecutar rampante.\")"
+       ]
+      }
+     ],
+     "prompt_number": 1
     }
    ],
    "metadata": {}
